fix a small layout problem in Chrome: left part of the search box was lost when search box loses focus

--- a/web-app/css/layout.css
+++ b/web-app/css/layout.css
@@ -138,7 +138,7 @@ h1 {
 }
 
 #search {
-  width:400px;
+  width:401px;
   margin:0 auto;
 }
 
